<resources>
    <string name="app_name">Homzz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>

    <string name="facebook_app_name">RestaurantDemo</string>
    <string name="app_id">127204864290874</string>
    <string name="exception">Exception: %1$s</string>

    <string name="prompt_title_signup">Sign Up</string>
    <string name="prompt_ed_email">Email id</string>
    <string name="prompt_ed_full_name">Full Name</string>
    <string name="prompt_ed_phone">Phone Number</string>
    <string name="prompt_ed_password">Password</string>
    <string name="prompt_ed_cpassword">Confirm Password</string>
    <string name="prompt_tv_address">Address</string>
    <string name="prompt_ed_city">City</string>
    <string name="prompt_ed_state">State</string>
    <string name="prompt_ed_landmark">Landmark (optional)</string>

    <string name="prompt_ed_delivery">Delivery instruction(Optional)</string>
    <string name="prompt_chk_tc">Yes, I have read and accepted terms and conditions.</string>
    <string name="prompt_btn_create_account">Create Account</string>
    <string name="prompt_tv_forget_pass"><u>Forgot Password?</u></string>
    <string name="hello_blank_fragment"></string>
    <string name="prompt_ed_mobile">Phone Number</string>
    <string name="progress_reset_password">Password Reset</string>

    <string name="prompt_tv_any"><u>Any</u></string>
    <string name="spinner_select_locality">Select Locality</string>
    <string name="actionbar_done">Done</string>

    //Navigation Drawer

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_login">Sign In</string>
    <string name="prompt_logout">Sign Out</string>
    <string-array name="prompt_nv_drawer">
        <item name="prompt_myaccount">My Profile</item>
        <item name="prompt_myorder">My Order</item>
        <item name="prompt_address">Address</item>
        <item name="prompt_offers">Offers</item>
        <item name="prompt_logout">Contact Us</item>
        <item name="prompt_logout">Sign In</item>
    </string-array>
    <string name="prompt_nv_name">Welcome Guest</string>
    <string name="prompt_nv_email">Login to get exclusive offer</string>


    //Spinner Array

    <string-array name="spinner_city">
        <item>Gurgaon</item>
        <item>New Delhi</item>
        <item>Noida</item>
    </string-array>

    <string-array name="action_tab_name">
        <item>Trending</item>
        <item>Search</item>
    </string-array>

    //SeacrhView

    <string name="search_city">locations or developers or projects</string>
    <string name="search_location">Search Locality</string>
    <string name="demo_min_label">Lacs</string>
    <string name="demo_max_label">Crores</string>
    <string name="demo_sqft">SqFt</string>

    <string name="title_activity_nn_drawer">NnDrawerActivity</string>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="title_activity_project_list">ProjectListActivity</string>
    <string name="title_activity_send_msg">SendMsgActivity</string>
    <string name="title_activity_search_data">SearchDataActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_favourite">FavouriteActivity</string>

    <string name="default_chip">Default</string>
    <string name="attrs_chip">With custom XML attributes</string>
    <string name="with_layout">With overall layout res, background color and click listener</string>
    <string name="with_override">With overrided ChipViewAdapter getLayoutRes and getBackgroundColor</string>


</resources>
